# tama.backend

./: .gitignore  README.md  db.vuerd.json  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml
main/: urls.py
main/settings/: defaults.py
