[tool.poetry]
name = "tama.backend"
version = "0.1.0"
description = ""
authors = ["TuanHoang <hoangdt@icts.vn>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
